--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -93,7 +93,7 @@
                             <span class="icon icon-sm rounded-circle bg-info-light"><i
                                     class="text-info material-icons md-today"></i></span>
                             <div class="text">
-                                <h6 class="mb-1 card-title">Daily Earning</h6> <span>₹ <%= dailyRevenue[0] ?
+                                <h6 class="mb-1 card-title">Daily Revenue</h6> <span>₹ <%= dailyRevenue[0] ?
                                         dailyRevenue[0].total.toFixed(2):0 %></span>
                             </div>
                         </article>
@@ -105,7 +105,7 @@
                             <span class="icon icon-sm rounded-circle bg-info-light"><i
                                     class="text-info material-icons md-date_range"></i></span>
                             <div class="text">
-                                <h6 class="mb-1 card-title">Weekly Earning</h6> <span>₹ <%= weeklyRevenue[0] ?
+                                <h6 class="mb-1 card-title">Weekly Revenue</h6> <span>₹ <%= weeklyRevenue[0] ?
                                         weeklyRevenue[0].total.toFixed(2) :0 %></span>
                             </div>
                         </article>
@@ -117,7 +117,7 @@
                             <span class="icon icon-sm rounded-circle bg-info-light"><i
                                     class="text-info material-icons md-shopping_basket"></i></span>
                             <div class="text">
-                                <h6 class="mb-1 card-title">Monthly Earning</h6><span>₹ <%= monthlyRevenue[0] ?
+                                <h6 class="mb-1 card-title">Monthly Revenue</h6><span>₹ <%= monthlyRevenue[0] ?
                                         monthlyRevenue[0].total.toFixed(2) :0 %></span>
                             </div>
                         </article>
@@ -129,7 +129,7 @@
                             <span class="icon icon-sm rounded-circle bg-info-light"><i
                                     class="text-info material-icons md-insert_invitation"></i></span>
                             <div class="text">
-                                <h6 class="mb-1 card-title">Yearly Earning</h6> <span>₹ <%= yearlyRevenue[0] ?
+                                <h6 class="mb-1 card-title">Yearly Revenue</h6> <span>₹ <%= yearlyRevenue[0] ?
                                         yearlyRevenue[0].total.toFixed(2) :0 %></span>
                             </div>
                         </article>
@@ -151,7 +151,7 @@
                         <div class="card w-100 ">
                             <article class="card-body">
                                 <h5 class="card-title">Sale statistics</h5>
-                                <canvas id="myChart2" height="217"></canvas>
+                                <canvas id="myChart2" ></canvas>
                             </article>
                         </div>
                     </div>
