--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -6,10 +6,10 @@
                     <div class="row align-items-center">
                         <div class="col flex-horizontal-center">
                             <img class="icon-email" src="/imgs/theme/icons/icon-email.svg" alt="">
-                            <h4 class="font-size-20 mb-0 ml-3">Sign up to Newsletter</h4>
+                            <h4 class="font-size-20 mb-0 ml-3">Sign up to Earn Referral Rewards</h4>
                         </div>
                         <div class="col my-4 my-md-0 des">
-                            <h5 class="font-size-15 ml-4 mb-0">...and receive <strong>$25 coupon for first shopping.</strong></h5>
+                            <h5 class="font-size-15 ml-4 mb-0">...and receive <strong>₹150 for every referral.</strong></h5>
                         </div>
                     </div>
                 </div>
@@ -66,12 +66,12 @@
                 <div class="col-lg-2  col-md-3">
                     <h5 class="widget-title wow fadeIn animated">My Account</h5>
                     <ul class="footer-list wow fadeIn animated">
-                        <li><a href="#">Sign In</a></li>
-                        <li><a href="#">View Cart</a></li>
-                        <li><a href="#">My Wishlist</a></li>
-                        <li><a href="#">Track My Order</a></li>
+                        <li><a href="/register">Sign In</a></li>
+                        <li><a href="/cart">View Cart</a></li>
+                        <li><a href="/wishList">My Wishlist</a></li>
+                        <li><a href="/dashboard">Dashboard</a></li>
                         <li><a href="#">Help</a></li>
-                        <li><a href="#">Order</a></li>
+                       
                     </ul>
                 </div>
                 <div class="col-lg-4">
